--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="styles/styles.css"/>
 <script type="text/javascript" src="scripts/jquery.min.1.11.2.js"></script>
 </head>
-<body>
+<body class="nobg">
 <div class="top">
   <div class="container">
     <div class="search"> <span>Search this site </span> |
