--- a/detailexperience.htm
+++ b/detailexperience.htm
@@ -65,28 +65,38 @@
     <nav class="breadcrumb">
       <ul>
         <li><a href="/trang-chu.htm">Home</a></li>
-        <li><a href="/san-pham.htm">News</a></li>
+        <li><a href="/san-pham.htm">Experience Travel</a></li>
       </ul>
     </nav>
     <section class="content">
       <article class="iblock detail-news">
  
-        <h1 class="tt-detail-news">Discovering Tram Chim National Park through the green tour</h1>
+        <h1 class="tt-detail-news">Etiquette in Thailand</h1>
         <!-- begin-->
-        <p>(TITC) - Recently, Centre for Tourism and Environmental Education - Tram Chim National Park (Tam Nong District, Dong Thap Province) has officially put into operation of the green tour discovering Tram Chim National Park.</p>
-<p>This is the green tour because visitors will move by environmentally friendly transport means, such as electric cars and solar energy tourist boats.</p>
-<p style="text-align:center"><img  src="data/tramchim1.jpg" width="500" /></p>
-<p>
-The tour route has a total length of about 12km with duration of 35 minutes. For the first 4km, visitors take electric cars with the speed of 30km/h. In the last 8km, visitors take solar energy tourist boats with the speed of 15km/h. The special feature of solar energy tourist boats is no noise and do not affect the lives of animals, especially birds. Therefore, visitors will hear the sounds of waves lapping against boats and birds only.</p>
-<p style="text-align:center"><img  src="data/tramchim2.jpg" title="Discovering Tram Chim National Park through the green tour" width="500"/><br />
- 
-<p>Located in the central area of ​​Dong Thap Muoi, belonging to the lowest area of Mekong River, Tram Chim National Park has the natural area of 7,588ha and spreads over 6 communes of ​​Tan Cong Sinh, Phu Duc, Phu Tho, Phu Thanh A, Phu Thanh B, Phu Hiep and Tram Chim Town (Tam Nong District, Dong Thap Province). The park owns the beautiful natural landscape and is considered as a miniature Dong Thap Muoi in Southern region.
-</p>
-<p style="text-align:center"><img  src="data/tramchim3.jpg" width="500" /></p>
-<p>
-Tram Chim National Park has about 130 species of flora, distributing into 6 typical ecological community types of Dong Thap Muoi area, namely cajeput, lotus, ghost rice, tube grass, Ischaemum rugosum, and Eleocharis dulcis. The fauna system is also diversified with more than 130 species of freshwater fish, 132 species of water bird, typically red-headed crane – the largest bird in the family of stork in danger of extinction in the world.</p><p style="text-align:center"><img  src="data/tramchim4.jpg"  width="500"/></p><p>
+        <p class="text-center"><img src="data/exp/thai1.jpg" width="700" /></p>
+         <p>Thailand is an ideal country for anyone&rsquo;s first visit to Asia. There are many flights to  Bangkok, entry requirements are easy for most westerners, and tourist infrastructure is well developed in all popular regions of the country. Better still, most Thais maintain a deep respect for their traditions and customs, even in the face of Bangkok&rsquo;s frenetic rush towards modernity. This allows you to immerse yourself in one of Asia&rsquo;s most fascinating and beautiful cultures, while keeping the conveniences of the modern city close at hand.</p>
+<p>What&rsquo;s more, Thailand is known to be one of the best value destinations. Return travellers often rave about how their expectations were superseded.  Thailand allows them to experience  luxury at an affordable price, taking pride in its ability to spoil her visitors.</p>
+<p>Like any foreign country,  Thailand may at first perplex you with some of its traditions, but don&rsquo;t worry. Understanding and respecting the simple ones will endear you to the locals, and save you from being the wrong kind of &lsquo;farang&rsquo; on your vacation.</p>
+<p><strong>Your Wai or the Thai Wai</strong><br>
+  When you see Thais press their hands together with a slight bow, this is called a wai. The custom was brought to Thailand by Hindus from India, and has spread in popularity over centuries. The rules surrounding it are more complicated than you might imagine. Not all wais carry equal weight or convey equal respect. Generally speaking, younger people or those lower in social standing should wai first. The higher the hands, the more respect is being conveyed. It&rsquo;s also not unknown for Thais to wai as they pass by temples or spirit houses.</p>
+<p>Where does this leave a westerner? Off the hook, is where. Thais are generally aware this gesture is particular to their culture and so do not expect foreigners to make the attempt. Though you are unlikely to offend anyone with an incorrect wai, a handshake (usually to men) or light bow (usually to women) is usually enough.</p>
+<p class="text-center"><img src="data/exp/thai2.jpg" width="700" /><br /><i>Two Thai women pay respect</i></p>
 
-To Tram Chim in the flooding season (from July to November), visitors will have the opportunity to admire untouched green mangrove forests, grasslands, rice... succeeding each other on the vast expanse of water river and flocks of water birds following to fly in the sky.</p>
+<p><strong>The Music That Stops a Nation</strong><br>
+  If you&rsquo;re out in a public place at 8am or 6pm you&rsquo;ll probably hear music played from loudspeakers, then watch as all the Thais around you come to stand-still in complete silence. Even some escalators stop running until the music stops. No, this isn&rsquo;t some elaborate street improv act. It&rsquo;s the Thai national anthem. It lasts about a minute, and yes, every Thai able to hear it will stop what they&rsquo;re doing and stand still out of respect. Following their lead and doing the same is a simple way to show respect for the local culture and will be appreciated by any Thais who are with you at the time.</p>
+<p><strong>Manners and the King</strong><br>
+  The reverence Thais have for their King and Royal Family is about more than simple respect. In Thailand, the King is divine, and showing disrespect to royalty is a criminal offense known as <em>lèse majesté</em>. This law is more than mere symbolism. Four or five cases are typically heard before the courts each year, and political opponents have been known to level the charge at one another in times of crisis.</p>
+<p class="text-center"><img src="data/exp/thai3.jpg" width="700" /><br /><i>Grand Palace, Bangkok</i></p>
+
+<p>As a visitor however, simple politeness and common sense should keep you out of trouble. Don&rsquo;t criticize the Royal Family in any way. Don&rsquo;t damage, tear, or step on Thai currency (which carries the King&rsquo;s image). Also, leave any material related to <em>Anna and the King</em> or <em>The King and I</em> at home. Western versions of this story are seen as mocking the Thai Royal Family, particularly Mongkut (also known as Rama IV) who employed the real Anna Leonowens. It is illegal to possess any western version of the story or related material in Thailand.</p> <p style="float:right;" ><img src="data/exp/thai4.jpg" style="float:right;" /><br /><i>Shoes kept outside the entrance of a temple</i></p>
+<p><strong>Respect from Head to Toe</strong><br>
+  In Thailand, different parts of the body imply and command different levels of respect. Sorry lefties, but Thais use the right hand for eating, passing gifts, and shaking hands. You should do the same. If you&rsquo;re confused about body language, simply remember that the head is sacred, while the feet are thought to be unclean. Never touch a Thai person&rsquo;s head unless invited, and if you do so by accident, apologize right away. Conversely, never point your feet at anyone, as this also is considered very rude. It&rsquo;s also the reason you never step on Thai currency (even to stop it rolling away). You absolutely do not want to be seen standing on an image of the King.</p>
+
+<strong>Temple Etiquette</strong><br>
+  Thailand&rsquo;s temples are magnificent, and you&rsquo;ll probably spend a good chunk of your sightseeing inside them. The big tip here is<em>slip-on shoes</em>, since your shoes must be removed before entering most temples. Photos are usually welcome, but refrain from using your flash or photographing worshippers or staff directly. Remember, these are not just beautiful historic buildings. People come here to worship and pray. Finally, when you enter the temple, step over the threshold, not on it, since many Thais believe spirits reside there.</p>
+<p><strong>Rules of the Thai Table</strong><br>
+  Leave the chopsticks for your local &lsquo;pan-Asian&rsquo; restaurant! Real Thai food is eaten with a fork (left side) and spoon (right side), which you&rsquo;ll find far more useful in most cases. Spoon the food (which is usually shared) to your rice bowl and eat from that. It&rsquo;s polite to leave a little to show you are full – unless of course you intend to eat more, in which case, summon the server by waving quietly with your palm down and saying &lsquo;nong&rsquo;. Do not snap your fingers or raise your voice. Tipping is not customary in Thailand.</p>
+<p>There are many more aspects to Thai tradition, culture and etiquette waiting to be explored, but these are the major points to keep you out of trouble. The rest will be all part of your adventure in this fascinating country.
         <!-- end--> 
       </article>
       
