+ blog.htm + detailbolg.htm

--- a/index.htm
+++ b/index.htm
@@ -156,7 +156,7 @@
           <p class="more-mt"> <span class="more-s"><b><a>See more</a></b></span> <i class="caret-mt"></i></p>
           <figure class="img-mt"> <a><img src="data/des/t2.jpg" /></a>
             <div class="des-mt">
-              <p> HSapa & The North 2 Days 1 Night <a class="price-mt"><i class="fa fa-tag"></i> loading..</a> </p>
+              <p> Sapa & The North 2 Days 1 Night <a class="price-mt"><i class="fa fa-tag"></i> loading..</a> </p>
             </div>
           </figure>
           <p class="day-of-mt"><i class="fa fa-clock-o"></i> 2 DAYS 1 NIGHT</p>
@@ -190,11 +190,11 @@
         </article>
         <!--end articale-->
         
-       <article class="tour-mt">
+        <article class="tour-mt">
           <p class="more-mt"> <span class="more-s"><b><a>See more</a></b></span> <i class="caret-mt"></i></p>
           <figure class="img-mt"> <a><img src="data/des/t2.jpg" /></a>
             <div class="des-mt">
-              <p> HSapa & The North 2 Days 1 Night <a class="price-mt"><i class="fa fa-tag"></i> loading..</a> </p>
+              <p> Sapa & The North 2 Days 1 Night <a class="price-mt"><i class="fa fa-tag"></i> loading..</a> </p>
             </div>
           </figure>
           <p class="day-of-mt"><i class="fa fa-clock-o"></i> 2 DAYS 1 NIGHT</p>
@@ -280,7 +280,7 @@ new WOW().init();
 </script> 
 <script>
 $().UItoTop({});
-</script>
+</script> 
 <script src="scripts/jquery.mousewheel.min.js"></script> 
 <script src="scripts/jquery.simplr.smoothscroll.min.js"></script> 
 <script>
